@@ -1,7 +1,6 @@
 package com.cricketteam.app.cricketteam.repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -12,51 +11,53 @@ import com.mongodb.client.MongoCollection;
 
 public class PlayerMongoRepository implements PlayerRepository {
 
-    private MongoCollection<Document> playerCollection;
+	private MongoCollection<Document> playerCollection;
 
-    public PlayerMongoRepository(MongoClient client, String databaseName, String collectionName) {
-        this.playerCollection = client.getDatabase(databaseName).getCollection(collectionName);
-    }
+	public PlayerMongoRepository(MongoClient client, String databaseName, String collectionName) {
+		this.playerCollection = client.getDatabase(databaseName).getCollection(collectionName);
+	}
 
-    @Override
-    public List<Player> findAll() {
-        return StreamSupport.stream(playerCollection.find().spliterator(), false)
-                .map(this::fromDocument)
-                .collect(Collectors.toList());
-    }
+	@Override
+	public List<Player> findAll() {
+		return StreamSupport.stream(playerCollection.find().spliterator(), false)
+				.map(this::fromDocument)
+				.toList();
+	}
 
-    @Override
-    public Player findById(String id) {
-        Document d = playerCollection.find(com.mongodb.client.model.Filters.eq("id", id)).first();
-        if (d != null) {
-            return fromDocument(d);
-        }
-        return null;
-    }
+	@Override
+	public Player findById(String id) {
+		Document d = playerCollection.find(com.mongodb.client.model.Filters.eq("id", id)).first();
+		if (d != null) {
+			return fromDocument(d);
+		}
+		return null;
+	}
 
-    @Override
-    public void save(Player player) {
-        playerCollection.insertOne(new Document()
-                .append("id", player.getId())
-                .append("name", player.getName())
-                .append("role", player.getRole()));
-    }
+	@Override
+	public void save(Player player) {
+		playerCollection.insertOne(new Document()
+				.append("id", player.getId())
+				.append("name", player.getName())
+				.append("role", player.getRole()));
+	}
 
-    @Override
-    public void update(Player player) {
-        playerCollection.replaceOne(com.mongodb.client.model.Filters.eq("id", player.getId()),
-                new Document()
-                        .append("id", player.getId())
-                        .append("name", player.getName())
-                        .append("role", player.getRole()));
-    }
+	@Override
+	public void update(Player player) {
+		playerCollection.replaceOne(com.mongodb.client.model.Filters.eq("id", player.getId()),
+				new Document()
+						.append("id", player.getId())
+						.append("name", player.getName())
+						.append("role", player.getRole()));
+	}
 
-    @Override
-    public void delete(String id) {
-        playerCollection.deleteOne(com.mongodb.client.model.Filters.eq("id", id));
-    }
+	@Override
+	public void delete(String id) {
+		playerCollection.deleteOne(com.mongodb.client.model.Filters.eq("id", id));
+	}
 
-    private Player fromDocument(Document d) {
-        return new Player(d.getString("id"), d.getString("name"), d.getString("role"));
-    }
+	private Player fromDocument(Document d) {
+		return new Player(d.getString("id"), d.getString("name"), d.getString("role"));
+	}
 }
+
+
